--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,29 @@ sandbox-agent/target/
 sandbox-debug-module/target/
 sandbox-mgr-module/target/
 sandbox-mgr-provider/target/
+sandbox-module-starter/target/
+scarb-agent/target/
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
